TrustChat/src/hub/msghub/err
gcc -g -o  MsgHub main_proc.c  -I/home/algorist/backup/cube-1.12/cubelib/include/ -I../../include/ -L../../../../lib -lopenstacktrust -lentity -lrouter -lpolicy_ui -lmemdb -lconnector -lmessage -llogicdb -lstruct -lsysfunc -lcrypto_func -lpthread  -ldl
In file included from main_proc.c:30:0:
../../include/proc_config.h:12:11: error: ‘general_lib_init’ undeclared here (not in a function)
  {"UL_I",&general_lib_init,&user_info_list_desc,&general_lib_ops},
           ^
main_proc.c: In function ‘main’:
main_proc.c:167:51: warning: passing argument 1 of ‘create_struct_template’ from incompatible pointer type
     void * struct_template=create_struct_template(&main_config_desc);
                                                   ^
In file included from main_proc.c:13:0:
/home/algorist/backup/cube-1.12/cubelib/include/../include/struct_deal.h:112:8: note: expected ‘struct struct_elem_attr *’ but argument is of type ‘struct struct_elem_attr (*)[5]’
 void * create_struct_template(struct struct_elem_attr * struct_desc);
        ^
main_proc.c:287:44: warning: passing argument 1 of ‘create_struct_template’ from incompatible pointer type
     struct_template=create_struct_template(&plugin_config_desc);
                                            ^
In file included from main_proc.c:13:0:
/home/algorist/backup/cube-1.12/cubelib/include/../include/struct_deal.h:112:8: note: expected ‘struct struct_elem_attr *’ but argument is of type ‘struct struct_elem_attr (*)[6]’
 void * create_struct_template(struct struct_elem_attr * struct_desc);
        ^
main_proc.c:351:3: warning: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘void *’ [-Wformat=]
   printf("monitor sub_proc %s started successfully!\n",sec_subject_getname(sub_proc));
   ^
Makefile:14: recipe for target 'MsgHub' failed
make: *** [MsgHub] Error 1
